[gd_scene load_steps=3 format=3 uid="uid://buosgne8j5kq5"]

[ext_resource type="Script" path="res://WaypointPanel.gd" id="1_763x2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3rlh4"]
bg_color = Color(0.905882, 0.498039, 0.396078, 1)

[node name="WaypointPanel" type="Panel"]
process_priority = 1
offset_right = 495.0
offset_bottom = 138.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_3rlh4")
script = ExtResource("1_763x2")

[node name="NameBox" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 21.0
offset_right = 97.0
offset_bottom = 47.0
text = "Name"

[node name="IdBox" type="Label" parent="."]
layout_mode = 0
offset_left = 124.0
offset_top = 8.0
offset_right = 164.0
offset_bottom = 34.0
text = "ID"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 82.0
offset_right = 92.0
offset_bottom = 105.0

[node name="Resources" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 182.0
offset_top = 2.0
offset_right = 222.0
offset_bottom = 42.0

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 0
offset_left = 327.0
offset_top = 6.0
offset_right = 386.0
offset_bottom = 37.0
mouse_filter = 1
text = "Delete"

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 99.0
offset_right = 116.0
offset_bottom = 119.0

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 138.0
offset_top = 89.0
offset_right = 184.0
offset_bottom = 112.0
text = "Route"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 48.0
offset_right = 190.0
offset_bottom = 79.0
text = "Patrol Name"

[node name="SpinBox" type="SpinBox" parent="."]
layout_mode = 0
offset_left = 223.0
offset_top = 23.0
offset_right = 306.063
offset_bottom = 54.0

[node name="PrioBox" type="SpinBox" parent="."]
layout_mode = 0
offset_left = 222.0
offset_top = 71.0
offset_right = 305.063
offset_bottom = 102.0

[node name="ClassButton" type="Button" parent="."]
layout_mode = 0
offset_left = 328.0
offset_top = 53.0
offset_right = 393.0
offset_bottom = 84.0
text = "Classes"

[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="value_changed" from="SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="value_changed" from="PrioBox" to="." method="_on_prio_box_value_changed"]
[connection signal="pressed" from="ClassButton" to="." method="_on_class_button_pressed"]
